--- a/src/_includes/oldposts/2005-02-18-february-frenzy/index.html
+++ b/src/_includes/oldposts/2005-02-18-february-frenzy/index.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>
-      
-        February Frenzy |
-      
-      Flagstaff Frenzy
-    </title>
-    <meta name="description" content="You Must Be Really Bored!">
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <title>February Frenzy | Flagstaff Frenzy</title>
+    <meta name="description" content="You Must Be Really Bored!" />
     <meta name="application-name" content="Flagstaff Frenzy" />
     <style>
       .post-comments {
@@ -43,23 +41,26 @@
     </style>
   </head>
   <body>
-
-    <h1>
-      Flagstaff Frenzy
-    </h1>
+    <h1>Flagstaff Frenzy</h1>
 
     <main class="site-main" role="main">
-      
-<h1>
-  February Frenzy
-</h1>
-<time>February 18, 2005</time>
-<article>
-  <div class="center"><a href="http://picasaweb.google.com/flagstafffrenzy/UnivegaReborn#5395237737130527250"><img src="http://lh5.ggpht.com/_zoD15FRZxcs/St-8IwByihI/AAAAAAAAAE4/t--ISyTES7g/s800/univega_reborn.jpg" width="500" /></a><br />Dave's worst nightmare: 28 teeth in the back!</div>
-<p>The first monthly installment of the famed Flagstaff Frenzy will take place next Friday, February 25th at noon.  We will meet at the Flagstaff Trailhead, where Baseline Road becomes Flagstaff Road.</p>
-<p>See you there!</p>
-</article>
+      <h1>February Frenzy</h1>
+      <time>February 18, 2005</time>
+      <article>
+        <div class="center">
+          <a
+            href="http://picasaweb.google.com/flagstafffrenzy/UnivegaReborn#5395237737130527250"
+            ><img
+              src="https://res.cloudinary.com/flagstafffrenzy/image/fetch/http://lh5.ggpht.com/_zoD15FRZxcs/St-8IwByihI/AAAAAAAAAE4/t--ISyTES7g/s2400/univega_reborn.jpg" /></a
+          ><br />Dave's worst nightmare: 28 teeth in the back!
+        </div>
+        <p>
+          The first monthly installment of the famed Flagstaff Frenzy will take
+          place next Friday, February 25th at noon. We will meet at the
+          Flagstaff Trailhead, where Baseline Road becomes Flagstaff Road.
+        </p>
+        <p>See you there!</p>
+      </article>
     </main>
-
   </body>
 </html>
