--- a/src/pages/tag-permalinks.liquid
+++ b/src/pages/tag-permalinks.liquid
@@ -5,6 +5,7 @@ pagination:
   alias: tag
   filter:
     - all
+    - Classifieds
 permalink: /{{ tag | slugify }}/
 eleventyComputed:
   title: "From the {{ tag }} Collection"
