--- a/src/_includes/base.liquid
+++ b/src/_includes/base.liquid
@@ -12,52 +12,154 @@
     <meta name="description" content="You Must Be Really Bored!">
     <meta name="application-name" content="Flagstaff Frenzy" />
     <style>
-      img {
-        display: inline-block;
-        max-width: 100%;
-        height: auto;
+      /* Very Smol Reset */
+      * {
+        box-sizing: border-box;
+        margin: 0;
       }
-      .post-comments {
+
+      /* Layout */
+
+      body {
+        display: flex;
+        flex-direction: column;
+        min-height: 100vh;
+        padding: 5vh clamp(1rem, 5vw, 3rem) 1rem;
+        font-family: system-ui, sans-serif;
+        line-height: 1.5;
+        color: #222;
+      }
+
+      body > * {
+        --layout-spacing: max(8vh, 3rem);
+        --max-width: 70ch;
+        width: min(100%, var(--max-width));
+        margin-left: auto;
+        margin-right: auto;
+      }
+
+      nav ul {
         list-style: none;
-        padding: 20px;
-        background-color: #e1e5e9;
+        display: flex;
+        flex-wrap: wrap;
+        padding: 0;
+        margin-left: -1rem;
+        margin-right: -1rem;
       }
-      .archive {
-        display: grid;
-        grid-template-areas: "year months";
-        grid-template-columns: auto 1fr;
-        margin-bottom: 50px;
+
+      nav ul li {
+        padding: 0.5rem 1rem;
       }
-      .archive dt {
-        grid-area: year;
-        padding:1rem;
-        background-color: #f1f5f9;
+
+      nav [aria-current="page"] {
+        font-weight: bold;
       }
-      .archive dd {
-        grid-area: months;
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-        gap: 20px;
+
+      header,
+      main,
+      main > * + * {
+        margin-top: var(--layout-spacing);
       }
-      .archive-months div {
-        display: grid;
-        grid-template-columns: 2ch 1fr;
-        gap: 3px 5px;
+
+      body > footer {
+        margin-top: auto;
+        padding-top: var(--layout-spacing);
       }
-      h3 {
-        margin: 0 0 0.5rem;
+
+      body > footer div {
+        border-top: 1px solid #ccc;
+        padding-top: 0.5em;
+        font-size: 0.9rem;
+        color: #767676;
+      }
+
+      article * + * {
+        margin-top: 1em;
+      }
+
+      /* Typography */
+      :is(h1, h2, h3) {
+        line-height: 1.2;
+      }
+
+      :is(h1, h2) {
+        max-width: 40ch;
+      }
+
+      :is(h2, h3):not(:first-child) {
+        margin-top: 2em;
+      }
+
+      a {
+        color: navy;
+        text-underline-offset: 0.08em;
+      }
+
+      a:hover {
+        text-decoration: none;
+      }
+
+      a:focus {
+        outline: 1px solid currentColor;
+        outline-offset: 0.2em;
+      }
+
+      /* Media */
+
+      article img {
+        display: block;
+        width: 100%;
+        min-height: 20rem;
+        max-height: 40vh;
+        object-fit: cover;
+        margin: 2rem auto;
+      }
+
+      @supports (aspect-ratio: 1) {
+        article img {
+          max-height: unset;
+          aspect-ratio: 3/2;
+        }
+      }
+
+      /* Supporting Content */
+
+      code:not([class*="language"]) {
+        font-family: Consolas, Monaco, Andale Mono, Ubuntu Mono, monospace;
+        font-size: 1.75ex;
+        color: #444;
+        background-color: rgba(0, 0, 0, 0.1);
+        padding-right: 0.15em;
+        padding-left: 0.15em;
+      }
+
+      blockquote {
+        margin: 2rem 0;
+        padding: 0.5em 1rem;
+        border-left: 3px solid rgba(0, 0, 0, 0.35);
+        background-color: rgba(0, 0, 0, 0.05);
+        border-radius: 0 0.25rem 0.25rem 0;
       }
     </style>
   </head>
   <body>
 
-    <h1>
-      Flagstaff Frenzy
-    </h1>
+    <nav>
+      <ul role="list">
+        <li><a href="/">Home</a></li>
+        <li><a href="/archives/">Archives</a></li>
+        <li><a href="/dear-dave/">Dear Dave</a></li>
+        <li><a href="/short-stories/">Stories</a></li>
+      </ul>
+    </nav>
 
-    <main class="site-main" role="main">
-      {{ content }}
-    </main>
+    {{ content }}
+
+    <footer>
+      <div>
+        <p>&copy; {% year %} {{ meta.siteName }}{% if meta.authorName %} • {{ meta.authorName }}{% endif %}</p>
+      </div>
+    </footer>
 
   </body>
 </html>
