--- a/src/pages/homepage.liquid
+++ b/src/pages/homepage.liquid
@@ -2,54 +2,45 @@
 permalink: /index.html
 ---
 
-{% assign posts_by_dave = posts | where: "author", "Dave" %}
-Dave: {{ posts_by_dave | size }}<br>
-{% assign posts_by_steve = posts | where: "author", "Steve" %}
-Steve: {{ posts_by_steve | size }}<br>
-{% assign posts_by_greg = posts | where: "author", "Greg" %}
-Greg: {{ posts_by_greg | size }}<br>
-{% assign posts_by_kevin = posts | where: "author", "Kevin" %}
-Kevin: {{ posts_by_kevin | size }}<br>
-{% assign posts_by_isean = posts | where: "author", "iSean" %}
-iSean: {{ posts_by_isean | size }}<br>
-{% assign posts_by_matt = posts | where: "author", "Matt" %}
-Matt: {{ posts_by_matt | size }}<br>
-{% assign posts_by_adriana = posts | where: "author", "Adriana" %}
-Adriana: {{ posts_by_adriana | size }}<br>
-{% assign posts_by_werner = posts | where: "author", "Werner" %}
-Werner: {{ posts_by_werner | size }}
+<header>
+  <h1>
+    Flagstaff Frenzy
+  </h1>
+</header>
 
-{% assign posts_by_year = datedposts | group_by: "year" | sort: "name" | reverse %}
-{% for year in posts_by_year %}
-  <h2>{{ year.name }}</h2>
-  {% assign posts_by_month = year.items | group_by: "month" | sort: "name" | reverse %}
-  {% for month in posts_by_month %}
-    <h3>{{ month.name | monthName }}</h3>
-    <ul>
-      {% for post in month.items %}
-        <li>
-          {{ post.publish_date | date: "%d" }} - <a href="/bygone/{{ post.year }}-{{ post.month }}-{{ post.day }}-{{ post.title | slugify }}">{{ post.title }}</a> ({{ post.comments | size }})
-        </li>
+<main>
+  <article>
+    {% assign posts_by_year = posts | group_by: "year" | sort: "name" | reverse %}
+    {% for year in posts_by_year %}
+      <h2>{{ year.name }}</h2>
+      {% assign posts_by_month = year.items | group_by: "month" | sort: "name" | reverse %}
+      {% for month in posts_by_month %}
+        <h3>{{ month.name | monthName }}</h3>
+        <ul>
+          {% for post in month.items %}
+            <li>
+              {{ post.publish_date | date: "%d" }} - <a href="/bygone/{{ post.year }}-{{ post.month }}-{{ post.day }}-{{ post.title | slugify }}">{{ post.title }}</a> ({{ post.comments | size }})
+            </li>
+          {% endfor %}
+        </ul>
       {% endfor %}
-    </ul>
-  {% endfor %}
-{% endfor %}
+    {% endfor %}
+  </article>
+</main>
 
-{% comment %}
-{% assign most_recent_posts = posts | sort: "post_date" | reverse | limit: 5 %}
-{% for post in most_recent_posts %}
-<article style="margin-block:2rem">
-<h2>{{ post.title }}</h2>
-<div>By {{ post.author }} @ {{ post.post_date | date: "%B %d, %Y at %H:%M" }}</div>
-<div>
-{{ post.post_content }}
-</div>
-{% for record in post.comments | sort: "post_date" | reverse %}
-<aside style="background-color:#e1e5e9;border-top:1px solid #fff;padding:1rem">
-{{ record.comment_author }} @ {{ record.comment_date | date: "%B %d, %Y at %H:%M" }}
-<div>{{ record.comment_content }}</div>
-</aside>
-{% endfor %}
-</article>
-{% endfor %}
-{% endcomment %}
+  {% comment %} {% assign posts_by_dave = posts | where: "author", "Dave" %}
+  Dave: {{ posts_by_dave | size }}<br>
+  {% assign posts_by_steve = posts | where: "author", "Steve" %}
+  Steve: {{ posts_by_steve | size }}<br>
+  {% assign posts_by_greg = posts | where: "author", "Greg" %}
+  Greg: {{ posts_by_greg | size }}<br>
+  {% assign posts_by_kevin = posts | where: "author", "Kevin" %}
+  Kevin: {{ posts_by_kevin | size }}<br>
+  {% assign posts_by_isean = posts | where: "author", "iSean" %}
+  iSean: {{ posts_by_isean | size }}<br>
+  {% assign posts_by_matt = posts | where: "author", "Matt" %}
+  Matt: {{ posts_by_matt | size }}<br>
+  {% assign posts_by_adriana = posts | where: "author", "Adriana" %}
+  Adriana: {{ posts_by_adriana | size }}<br>
+  {% assign posts_by_werner = posts | where: "author", "Werner" %}
+  Werner: {{ posts_by_werner | size }} {% endcomment %}
