--- a/src/pages/archive-permalinks.liquid
+++ b/src/pages/archive-permalinks.liquid
@@ -1,5 +1,4 @@
 ---
-layout: base.liquid
 pagination:
   data: posts
   size: 1
@@ -27,27 +26,29 @@ eleventyComputed:
         </li>
     {% endfor %}
     </ol>
+    {% assign sortedPosts = posts | sort: "publish_date" | reverse %}
+    {% assign totalPosts = sortedPosts | size %}
+    {% assign firstIndex = totalPosts | minus: 1 %}
+    {% assign currIndex = sortedPosts | findIndex: post.publish_date, "publish_date" %}
+    {% assign nextIndex = currIndex | minus: 1 %}
+    {% assign prevIndex = currIndex | plus: 1 %}
+    {% assign nextPost = sortedPosts[nextIndex] %}
+    {% assign prevPost = sortedPosts[prevIndex] %}
+    {% assign lastPost = sortedPosts[0] %}
+    {% assign firstPost = sortedPosts[firstIndex] %}
+    
+    <div>
+      <pre>first_post: <a
+        href="/archives/{{ firstPost.year | slugify }}-{{ firstPost.month | slugify }}-{{ firstPost.day | slugify }}-{{ firstPost.title | slugify }}">{{
+        firstPost.title }}</a></pre>
+      <pre>prev_post: <a href="/archives/{{ prevPost.year | slugify }}-{{ prevPost.month | slugify }}-{{ prevPost.day | slugify }}-{{ prevPost.title | slugify }}">{{ prevPost.title }}</a></pre>
+      
+      <pre>next_post: <a href="/archives/{{ nextPost.year }}-{{ nextPost.month }}-{{ nextPost.day }}-{{ nextPost.title | slugify }}">{{ nextPost.title }}</a></pre>
+      <pre>last_post: <a
+        href="/archives/{{ lastPost.year | slugify }}-{{ lastPost.month | slugify }}-{{ lastPost.day | slugify }}-{{ lastPost.title | slugify }}">{{
+        lastPost.title }}</a></pre>
+    </div>
   </article>
-  {% assign sortedPosts = posts | sort: "publish_date" | reverse %}
-  {% assign totalPosts = sortedPosts | size %}
-  {% assign firstIndex = totalPosts | minus: 1 %}
-  {% assign currIndex = sortedPosts | findIndex: post.publish_date, "publish_date" %}
-  {% assign nextIndex = currIndex | minus: 1 %}
-  {% assign prevIndex = currIndex | plus: 1 %}
-  {% assign nextPost = sortedPosts[nextIndex] %}
-  {% assign prevPost = sortedPosts[prevIndex] %}
-  {% assign lastPost = sortedPosts[0] %}
-  {% assign firstPost = sortedPosts[firstIndex] %}
-  
-  <pre>first_post: <a
-    href="/archives/{{ firstPost.year | slugify }}-{{ firstPost.month | slugify }}-{{ firstPost.day | slugify }}-{{ firstPost.title | slugify }}">{{
-    firstPost.title }}</a></pre>
-  <pre>prev_post: <a href="/archives/{{ prevPost.year | slugify }}-{{ prevPost.month | slugify }}-{{ prevPost.day | slugify }}-{{ prevPost.title | slugify }}">{{ prevPost.title }}</a></pre>
-  
-  <pre>next_post: <a href="/archives/{{ nextPost.year }}-{{ nextPost.month }}-{{ nextPost.day }}-{{ nextPost.title | slugify }}">{{ nextPost.title }}</a></pre>
-  <pre>last_post: <a
-    href="/archives/{{ lastPost.year | slugify }}-{{ lastPost.month | slugify }}-{{ lastPost.day | slugify }}-{{ lastPost.title | slugify }}">{{
-    lastPost.title }}</a></pre>
 </main>
 
 
